--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Board Game Web App</title>
-	<meta name="description" content="Let's list board games!">
-	<meta name="keywords" content="board,game,app,list">
+	<meta name="description" content="Let's organize board games!">
+	<meta name="keywords" content="board,game,app,organize">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
