--- a/src/components/site-layout/index.marko
+++ b/src/components/site-layout/index.marko
@@ -1,26 +1,27 @@
+static {
+	const production = process.env.NODE_ENV === 'production';
+	const path = production? '/board-game' : '';
+}
+
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width"/>
-    <title>
-      <${input.title}/>
-    </title>
-  </head>
-  <body>
-    <header>
-      <img.logo src="./logo.png" alt="marko logo"/>
-      <h1>
-        <${input.title}/>
-      </h1>
-      <nav.menu>
-        <a href="/">home</a>
-        <a href="/hello/routing">routes</a>
-        <a href="/layouts">layouts</a>
-      </nav>
-    </header>
-    <div.content>
-      <${input.content}/>
-    </div>
+<html lang='en-US'>
+	<head>
+		<meta charset='utf-8'/>
+    	<meta name='viewport' content='width=device-width'/>
+    	<title><${input.title}/></title>
+	</head>
+	<body>
+		<header>
+			<img.logo src='./logo.png' alt='marko logo'/>
+			<h1><${input.title}/></h1>
+		<nav.menu>
+			<a href='${path}/'>home</a>
+			<a href='${path}/hello/routing'>routes</a>
+			<a href='${path}/layouts'>layouts</a>
+		</nav>
+		</header>
+		<section.content>
+			<${input.content}/>
+		</section>
   </body>
 </html>
