--- a/src/index.marko
+++ b/src/index.marko
@@ -1,6 +1,6 @@
 <site-layout>
-  <@title>Board-game webapp</@title>
-  <@content>
-    <h1>Welcome!</h1>
-  </@content>
+	<@title>Board-game webapp</@title>
+	<@content>
+		<board-game-list />
+	</@content>
 </site-layout>
