--- a/src/components/site-layout/style.css
+++ b/src/components/site-layout/style.css
@@ -1,78 +1,113 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	font-size: 14px;
+	height: 100%;
+	width: 100%;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+input, button, select {
+	font-family: inherit;
+}
+
 body {
-  font-family: sans-serif;
-  background: #eee;
-  padding: 0;
-  margin: 0;
-  color: #333;
+	font-family: 'Quicksand', sans-serif;
+	color: #333;
 }
 
 a {
-  color: #26a;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-header {
-  padding: 2em;
-  border-bottom: 1px solid #ccc;
-  background: #fff;
-  text-align: center;
-}
-
-nav.menu a {
-  display: inline-block;
-  padding: 0.5em 1em;
-}
-
-img.logo {
-  width: 160px;
-  height: 88px;
-  margin-bottom: 1em;
+	color: #26a;
+	text-decoration: none;
+	font-weight: 500;
 }
 
 h1 {
-  font-size: 2.5em;
-  font-weight: 300;
-  margin: 0;
+	font-size: 2em;
 }
 
 h2 {
-  font-weight: 600;
-  margin-top: 1.5em;
-  margin-bottom: 0.5em;
+	font-size: 1.7em;
+	margin-bottom: 0.5em;
 }
 
-h3 {
-  font-weight: 600;
-  margin-top: 1.5em;
-  margin-bottom: 0.5em;
-  font-size: 1em;
+a:hover {
+	text-decoration: underline;
 }
 
-p {
-  line-height: 1.6;
+body > header {
+	align-items: center;
+	background-color: purple;
+	color:#fff;
+	display: flex;
+	padding: 1em;
+}
+
+body > header a {
+	color:#fff;
+	font-weight: 500;
+}
+
+body > header a:hover {
+	text-decoration: none;
+}
+
+body > header nav {
+	flex: 1;
+	text-align: right;
 }
 
 .content {
-  padding: 1em 2em;
-  max-width: 30em;
-  margin: auto;
+	padding: 1em;
 }
 
-code {
-  color: #d03;
-  background-color: #f9f9f9;
-  padding: 0.1em 0.4em;
-  border: 1px solid #e5e5e5;
-  border-radius: 0.15em;
-  display: inline-block;
+.new {
+	background-color: brown;
+	border-radius: 50%;
+	color: #fff;
+	font-size: 3em;
+	font-weight: 300;
+	height: 50px;
+	position: fixed;
+	bottom: 0.5em;
+	right: 0.5em;
+	text-align: center;
+	line-height: 1em;
+	width: 50px;
 }
 
-pre code {
-  display: block;
-  color: #396;
+.board-game-list > li {
+	display: flow-root;
+}
+
+.board-game-list > li + li {
+	margin-top: 1.5em;
+}
+
+.board-game-list .cover {
+	border-radius: 50%;
+	float: left;
+	margin-right: 0.5em;
+	width: 90px;
+}
+
+.board-game-list .title {
+	margin: 0.5em;
+	font-size: 1.5em;
+	font-weight: 500;
+}
+
+.board-game-list .tags li {
+	display: inline;
+}
+
+.board-game-list .tags li + li {
+	margin-left: 0.5em;
 }
