--- a/src/components/site-layout/index.marko
+++ b/src/components/site-layout/index.marko
@@ -7,17 +7,17 @@ static {
 <html lang='en-US'>
 	<head>
 		<meta charset='utf-8'/>
-    	<meta name='viewport' content='width=device-width'/>
+		<meta name='viewport' content='width=device-width'/>
 		<link href='https://fonts.googleapis.com/css?family=Quicksand:400,500' rel='stylesheet'>
-    	<title><${input.title}/></title>
+		<title><${input.title}/></title>
 	</head>
 	<body>
 		<header>
-			<h1><a href='${path}/'>MyBG</a></h1>
+			<h1><a href=`${path}/`>MyBG</a></h1>
 		</header>
 		<section.content>
 			<${input.content}/>
 		</section>
-		<a.new href='${path}/bg/new'>+</a>
+		<a.new href=`${path}/bg/new`>+</a>
   </body>
 </html>
